@@ -329,17 +329,11 @@ int main()
   set("ODE tolerance", 10.0);
   set("ODE maximum time step", 100.0);
   set("ODE nonlinear solver", "newton");
+  set("ODE linear solver", "iterative");
   set("ODE initial time step", 0.25);
-  
-  set("ODE discrete tolerance", 0.01);
-  set("ODE discrete tolerance factor", 0.1);
-  set("ODE discrete Krylov tolerance factor", 0.1);
 
   //set("ODE save solution", false);
 
-  set("ODE monitor convergence", true);
-  set("ODE discrete tolerance", 1e-14);
-  
   Courtemanche ode;
   ode.solve();
 
